Fixed spacing issue on header and linked benefits image to page

--- a/css/hottub101.css
+++ b/css/hottub101.css
@@ -74,7 +74,7 @@
 
 .intro_div
 {
-	margin: 45px 0px;
+	margin: 45px 0px 0px;
 	
 }
 
